update new relic path and name

--- a/conf/etc.d/04_newrelic.ini
+++ b/conf/etc.d/04_newrelic.ini
@@ -3,7 +3,7 @@ extension=newrelic.so
 [newrelic]
 
 newrelic.enabled=true
-newrelic.appname = "PHP Application"
+newrelic.appname = "Dev Application"
 newrelic.license = "3059beac230bc653378add929ca186d2b5ddfa5c"
 newrelic.logfile = /app/local/var/log/newrelic/php_agent.log
 ;newrelic.loglevel = none
